--- a/app/src/main/res/layout/activity_track.xml
+++ b/app/src/main/res/layout/activity_track.xml
@@ -76,7 +76,7 @@
         app:layout_constraintVertical_bias="0.432" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/totalCal"
         android:layout_width="31dp"
         android:layout_height="14dp"
         android:text="_____"
@@ -137,7 +137,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/endBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="End"
