--- a/app/src/main/res/layout/activity_track.xml
+++ b/app/src/main/res/layout/activity_track.xml
@@ -135,7 +135,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        tools:listitem="@layout/item_layout"/>
+        tools:listitem="@layout/track_layout"/>
 
     <Button
         android:id="@+id/endBtn"
