--- a/app/src/main/res/layout/track_layout.xml
+++ b/app/src/main/res/layout/track_layout.xml
@@ -35,7 +35,7 @@
                 android:textSize="16sp"
 
 
-                />
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -58,7 +58,7 @@
                 android:textSize="16sp"
 
 
-                />
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tvcalories"
@@ -80,8 +80,8 @@
                 android:layout_marginTop="-0dp"
                 android:inputType="number"
                 android:text=""
-                android:textSize="20sp" />
-            />
+                android:textSize="20sp"
+                android:textStyle="bold"/>
 
 
         </LinearLayout>
